# refusal_direction

./: .gitignore  pyproject.toml  setup.sh
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_0/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_1/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_10/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_2/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_3/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_4/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_5/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
data/sae_frac_active/gemma-scope-2b-pt-res-canonical/layer_6/width_16k/: canonical_alpaca_10000_last.pt  canonical_alpaca_126776_all.pt
notebooks/: SAE_latent_fraction_active.ipynb  calculate_sae_enrichment.ipynb  find_interesting_latents.ipynb  gemma_2b_it_blocks.12.hook_resid_post_16384_cfg.json  perturbation.ipynb  refusal_nnsight.ipynb  sae_enrichment.ipynb  sae_training.ipynb  sae_training_gemma-2-2b-it.ipynb  save_frac_active.ipynb
scripts/: enrichment_utils.py  utils.py
(+17 files in other folders)
