[tool.poetry]
name = "refusal-direction"
version = "0.1.0"
description = ""
authors = ["Daniel Lee <dajale423@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nnsight = "^0.3.6"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
einops = "^0.8.0"
transformers = "^4.45.2"
sae-lens = "^4.0.0"
sae-vis = "^0.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
